--- a/gbwkjc.html
+++ b/gbwkjc.html
@@ -11,7 +11,7 @@
 
 <body>
 <div id="h">
-	<div class="h1"><img src="images/wxewm.jpg" width="100%" height="100%px"></div>
+	<div class="h3"><img src="images/gqb.png" width="100%" height="100%px"></div>
 	<div class="h2">
 	    <div class="line">历年真题、押题密卷，助你轻松备考！</div>
 		<li><a href="https://mp.bookln.cn/book.htm?id=86510&sign=549536&share_=250780985">历史地理<div class="box-buttom"><button>进入</button></div></a></li>
