--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 
 <body>
 <div id="h">
-	<div class="h1"><img src="images/wxewm.jpg" width="100%" height="100%px"></div>
+   <div id="top">
+    <div class="left">
+    	<p>别让学历成</p>
+    	<p class="butong">为你的绊脚石!</p>
+    	<p class="gz">专注继续教育学历提升</p>
+    	<p class="hs">高起专、高起本、专升本（函授、业余）</p>
+    	<span><img src="images/mf.jpg" width="80%"></span>
+    </div>
+	<div class="h1"><img src="images/wxewm1.jpg"></div>
+  </div>
 	<div class="h2">
 	    <div class="line">历年真题、押题密卷，助你轻松备考！</div>
 		<li><a href="wkjc.html">高起专（文科）<div class="box-buttom"><button>进入</button></div></a></li>
