--- a/wkjc.html
+++ b/wkjc.html
@@ -11,7 +11,7 @@
 
 <body>
 <div id="h">
-	<div class="h1"><img src="images/wxewm.jpg" width="100%" height="100%px"></div>
+	<div class="h3"><img src="images/gqz.png" width="100%" height="100%px"></div>
 	<div class="h2">
 	    <div class="line">历年真题、押题密卷，助你轻松备考！</div>
 		<li><a href="https://qr.bookln.cn/book.htm?id=111617&sign=183b8d&_rand=1719754627892&share_=213237189">文科教程(在线做题与解答)<div class="box-buttom"><button>进入</button></div></a></li>
