--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <div id="h">
    <div id="top">
     <div class="left">
-    	<p>别让学历成</p>
-    	<p class="butong">为你的绊脚石!</p>
+    	<p>别让学历</p>
+    	<p class="butong">成为你的绊脚石!</p>
     	<p class="gz">专注继续教育学历提升</p>
-    	<p class="hs">高起专、高起本、专升本（函授、业余）</p>
+    	<p class="hs">高起专、高起本、专升本</p>
     	<span><img src="images/mf.jpg" width="80%"></span>
     </div>
 	<div class="h1"><img src="images/wxewm1.jpg"></div>
